codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__approvals_selection_popup.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Select Approval Mode

› 1. Agent (non-elevated sandbox) (current)  Agent (non-elevated sandbox)
  2. Agent (non-elevated sandbox)            Agent (non-elevated sandbox)
  3. Agent (full access)                     Codex can edit files outside this
                                             workspace and run commands with
                                             network access. Exercise caution
                                             when using.

  Press enter to confirm or esc to go back
