codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5.1-codex-max

  1. low               Fast responses with lighter reasoning
  2. medium (default)  Balances speed and reasoning depth for everyday tasks
› 3. high (current)    Greater reasoning depth for complex problems
  4. xhigh             Extra high reasoning depth for complex problems

  Press enter to confirm or esc to go back
