codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5.1-codex-max

  1. low               Fast responses with lighter reasoning
  2. medium (default)  Balances speed and reasoning depth for everyday tasks
  3. high              Greater reasoning depth for complex problems
› 4. xhigh (current)   Extra high reasoning depth for complex problems
                       ⚠ xhigh reasoning effort can quickly consume Plus plan
                       rate limits.

  Press enter to confirm or esc to go back
